# Opificina

./: Cargo.toml  Procfile  README.md  index.html  register.html  shopowner.html  user.html
assets/css/: main.css  main2.css
src/: db_operations.rs  main.rs
static/scripts/: register.js
static/scripts/js/: main.js
static/styles/: main.css  register.css
templates/: browse.html.tera  elements.html  index.html  index.html.tera  layout.html.tera  registration.html  registration.html.tera
