[package]
name = "musicorum"
version = "0.1.0"
authors = ["aravk33 <aravkasi@gmail.com>", "Nitin Ravi <nitinravi18@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
postgres = { version = "0.17.4", features = ["with-chrono-0_4"] }
chrono = "0.4.13"
